# euroage-tv

./: .abstruse.yml  .gitignore  .gitmodules  CMakeLists.txt  README.md
components/: integratedHand.ice
components/adminGame/: CMakeLists.txt  Makefile  README.md  adminGame.cdsl  cmake_install.cmake
components/adminGame/etc/: config
components/adminGame/src/: AdminInterface.py  AdminInterface.ui  adminGame.py  admin_widgets.py  gamemetricsI.py  genericworker.py  mainUI.ui  metrics.py  shadows.json  specificworker.py  stackedUI.ui  ui_mainUI.py  users.ui
components/bbdd/: bbdd.py  main.py  model.py  prueba.db  prueba3.db  report.py  report.ui  ui_report.py
components/fakeTV/: README.md  fakeTV.cdsl
components/fakeTV/etc/: config
components/fakeTV/src/: admingameI.py  fakeTV.py  genericworker.py  specificworker.py
components/gameManager/: CMakeLists.txt  README.md  adminstatemachine.smdsl  gameManager.cdsl
components/gameManager/etc/: config
components/gameManager/src/: CMakeLists.txt  admin_widgets.py  config.yml  gameManager.pro  gameManager.py  gamemetricsI.py  genericworker.py  history.py  login.ui  specificworker.py
components/integratedHand/: CMakeLists.txt  DoxyFile  README.md  integratedhand.cdsl  patatita.xml
components/integratedHand/etc/: config
components/integratedHand/src/: CMakeLists.txt  config.h  genericworker.cpp  genericworker.h  main.cpp  mainUI.ui  specificmonitor.h  specificworker.cpp  specificworker.h  touchpointsI.cpp  touchpointsI.h
components/tvGames/: CMakeCache.txt  CMakeLists.txt  GameMetrics_ice.py  Makefile  README.md  TouchPoints_ice.py  cmake_install.cmake  debug_edge.pnm  debug_gray_samples.pnm  debug_lines.ps  debug_output.pnm  debug_output.ps  debug_quads.ps  debug_quads_fixed.pnm  debug_segmentation.pnm  debug_threshold.pnm  gamestatemachine.smdsl  tvgames.cdsl
components/tvGames/EuroAgeGamesMetrics/: __init__.py
components/tvGames/etc/: config
components/tvGames/resources/: passwords.json  scores.json  shadows.json
components/tvGames/src/: AdminInterface.ui  CMakeLists.txt  admingameI.py  (+9 more)
components/tvGamesAdmin/: README.md  tvgamesadmin.cdsl
etc/: apriltag_conf.conf
etc/innermodel/: euroage.xml
etc/rcmanager/: tvgames.xml
interfaces/: AdminGame.ice  AdminGameInterface.ice  GameMetrics.ice  IntegratedHand.ice  TvGames.ice
interfaces/IDSLs/: AdminGame.idsl  AdminGameInterface.idsl  GameMetrics.idsl  IntegratedHand.idsl  TvGames.idsl
tools/: Euroage.desktop  launcher
(+111 files in other folders)
